--- a/src/main/resources/assets/golf_it/lang/en_us.json
+++ b/src/main/resources/assets/golf_it/lang/en_us.json
@@ -2,6 +2,7 @@
   "itemGroup.tabgolf": "Golf It!",
   "item.golf_it.golf_ball": "Golf Ball",
   "item.golf_it.golf_club_ranged": "Golf Club ",
+  "block.golf_it.golf_flag": "Golf Flag",
   "block.golf_it.golf_ball_block": "Golf Ball Block",
   "block.golf_it.golf_hole": "Golf Hole"
 }
