Added behaviour when ball hits sand

--- a/src/main/resources/assets/golf_it/lang/en_us.json
+++ b/src/main/resources/assets/golf_it/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "itemGroup.tabgolf": "Golf It!",
+  "item.golf_it.golf_club_sand": "Golf Club Sand",
   "item.golf_it.golf_ball": "Golf Ball",
   "item.golf_it.golf_club_ranged": "Golf Club ",
   "block.golf_it.golf_flag": "Golf Flag",
