--- a/src/main/resources/assets/golf_it/lang/en_us.json
+++ b/src/main/resources/assets/golf_it/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.golf_it.golf_club_sand": "Golf Club Sand",
   "item.golf_it.golf_ball": "Golf Ball",
   "item.golf_it.golf_club_ranged": "Golf Club",
+  "item.golf_it.bag": "Bag",
   "block.golf_it.golf_flag": "Golf Flag",
   "block.golf_it.golf_ball_block": "Golf Ball Block",
   "block.golf_it.golf_hole": "Golf Hole"
